--- a/pagerank.ipynb
+++ b/pagerank.ipynb
@@ -29,7 +29,7 @@
    ],
    "source": [
     "G = nx.DiGraph()\n",
-    "elist = [('b', 'a', 5.0), ('c', 'a', 3.0), ('d', 'a', 1.0), ('e', 'a', 7.3), ('c', 'b', 1.0)]\n",
+    "elist = [('b', 'a', 5.0), ('c', 'a', 3.0), ('d', 'a', 1.0), ('e', 'a', 0.3), ('c', 'b', 1.0)]\n",
     "G.add_weighted_edges_from(elist)\n",
     "G.add_edge('e', 'b', weight=1)\n",
     "nx.draw(G, pos=nx.circular_layout(G))"
@@ -44,9 +44,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AdjacencyView({'b': {'a': {'weight': 5.0}}, 'a': {}, 'c': {'a': {'weight': 3.0}, 'b': {'weight': 1.0}}, 'd': {'a': {'weight': 1.0}}, 'e': {'a': {'weight': 7.3}, 'b': {'weight': 1}}})\n",
+      "AdjacencyView({'b': {'a': {'weight': 5.0}}, 'a': {}, 'c': {'a': {'weight': 3.0}, 'b': {'weight': 1.0}}, 'd': {'a': {'weight': 1.0}}, 'e': {'a': {'weight': 0.3}, 'b': {'weight': 1}}})\n",
       "OutEdgeView([('b', 'a'), ('c', 'a'), ('c', 'b'), ('d', 'a'), ('e', 'a'), ('e', 'b')])\n",
-      "OutEdgeDataView([('b', 'a', {'weight': 5.0}), ('c', 'a', {'weight': 3.0}), ('c', 'b', {'weight': 1.0}), ('d', 'a', {'weight': 1.0}), ('e', 'a', {'weight': 7.3}), ('e', 'b', {'weight': 1})])\n"
+      "OutEdgeDataView([('b', 'a', {'weight': 5.0}), ('c', 'a', {'weight': 3.0}), ('c', 'b', {'weight': 1.0}), ('d', 'a', {'weight': 1.0}), ('e', 'a', {'weight': 0.3}), ('e', 'b', {'weight': 1})])\n"
      ]
     }
    ],
@@ -64,11 +64,11 @@
     {
      "data": {
       "text/plain": [
-       "{'b': 0.1498223703946586,\n",
-       " 'a': 0.5131031970084512,\n",
-       " 'c': 0.11235814419896345,\n",
-       " 'd': 0.11235814419896345,\n",
-       " 'e': 0.11235814419896345}"
+       "{'b': 0.20341562751483294,\n",
+       " 'a': 0.47830197742068853,\n",
+       " 'c': 0.10609413168815962,\n",
+       " 'd': 0.10609413168815962,\n",
+       " 'e': 0.10609413168815962}"
       ]
      },
      "execution_count": 4,
@@ -79,6 +79,29 @@
    "source": [
     "pr = nx.pagerank(G, alpha=0.9)\n",
     "pr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 0.5147859809815127,\n",
+      " 'b': 0.1472283935664409,\n",
+      " 'c': 0.11266187515068218,\n",
+      " 'd': 0.11266187515068218,\n",
+      " 'e': 0.11266187515068218}\n"
+     ]
+    }
+   ],
+   "source": [
+    "G['e']['a']['weight'] = 10\n",
+    "pr = nx.pagerank(G, alpha=0.9)\n",
+    "pprint(pr)"
    ]
   }
  ],
